--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,16 @@ body {
   background-color: #1a1a1a;
   color: white;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: #FFFFFF;
+  -webkit-box-shadow: 0 0 0px 1000px #334155 inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
