--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,7 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px #334155 inset;
   transition: background-color 5000s ease-in-out 0s;
 }
+
+.suppliers{
+  border: 1px solid white;
+}
