--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: Inter, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serifx;
   background-color: #1a1a1a;
   color: white;
 }
